HW6/mnist-from-scratch-master-DNN/slurm-1202653.out
/usr/bin/gcc  -c main.c -o main.o -lm
main.c:11:1: error: unknown type name ‘using’
   11 | using namespace std;
      | ^~~~~
main.c:11:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘std’
   11 | using namespace std;
      |                 ^~~
make: *** [Makefile:18: main.o] Error 1
